CN-274 Update Case API CollectionCaseDTO to include and populate fields for integration with Contact Centre (#19)
